tp02-d04/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> LstV ;
Rule 2     S -> FIM ;
Rule 3     LstV -> LstV ; Instrucao
Rule 4     LstV -> Instrucao
Rule 5     Instrucao -> ESCREVER Resultado
Rule 6     Instrucao -> VAR ListaSimbolos
Rule 7     Instrucao -> Identificador
Rule 8     Instrucao -> COMENTARIO
Rule 9     Instrucao -> PARA ID EM [ MATH . . MATH ] FAZER Resultado FIM PARA
Rule 10    Instrucao -> ESCREVER Resultado COMENTARIO
Rule 11    Instrucao -> VAR ListaSimbolos COMENTARIO
Rule 12    ListaSimbolos -> ListaIDs
Rule 13    ListaSimbolos -> ListaIDs , ListaSimbolos
Rule 14    ListaIDs -> ID
Rule 15    ListaIDs -> ID = MATH
Rule 16    Identificador -> ID = MATH
Rule 17    Resultado -> ListaResultados
Rule 18    Resultado -> ListaResultados , Resultado
Rule 19    ListaResultados -> MATH
Rule 20    MATH -> MATH + MATH
Rule 21    MATH -> MATH - MATH
Rule 22    MATH -> MATH * MATH
Rule 23    MATH -> MATH / MATH
Rule 24    MATH -> - MATH
Rule 25    MATH -> ( MATH )
Rule 26    MATH -> NUM
Rule 27    MATH -> ID
Rule 28    MATH -> STRING

Terminals, with rules where they appear

(                    : 25
)                    : 25
*                    : 22
+                    : 20
,                    : 13 18
-                    : 21 24
.                    : 9 9
/                    : 23
;                    : 1 2 3
=                    : 15 16
COMENTARIO           : 8 10 11
EM                   : 9
ESCREVER             : 5 10
FAZER                : 9
FIM                  : 2 9
ID                   : 9 14 15 16 27
NUM                  : 26
PARA                 : 9 9
STRING               : 28
VAR                  : 6 11
[                    : 9
]                    : 9
error                : 

Nonterminals, with rules where they appear

Identificador        : 7
Instrucao            : 3 4
ListaIDs             : 12 13
ListaResultados      : 17 18
ListaSimbolos        : 6 11 13
LstV                 : 1 3
MATH                 : 9 9 15 16 19 20 20 21 21 22 22 23 23 24 25
Resultado            : 5 9 10 18
S                    : 0

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . LstV ;
    (2) S -> . FIM ;
    (3) LstV -> . LstV ; Instrucao
    (4) LstV -> . Instrucao
    (5) Instrucao -> . ESCREVER Resultado
    (6) Instrucao -> . VAR ListaSimbolos
    (7) Instrucao -> . Identificador
    (8) Instrucao -> . COMENTARIO
    (9) Instrucao -> . PARA ID EM [ MATH . . MATH ] FAZER Resultado FIM PARA
    (10) Instrucao -> . ESCREVER Resultado COMENTARIO
    (11) Instrucao -> . VAR ListaSimbolos COMENTARIO
    (16) Identificador -> . ID = MATH

    FIM             shift and go to state 3
    ESCREVER        shift and go to state 5
    VAR             shift and go to state 6
    COMENTARIO      shift and go to state 8
    PARA            shift and go to state 9
    ID              shift and go to state 10

    S                              shift and go to state 1
    LstV                           shift and go to state 2
    Instrucao                      shift and go to state 4
    Identificador                  shift and go to state 7

state 1

    (0) S' -> S .



state 2

    (1) S -> LstV . ;
    (3) LstV -> LstV . ; Instrucao

    ;               shift and go to state 11


state 3

    (2) S -> FIM . ;

    ;               shift and go to state 12


state 4

    (4) LstV -> Instrucao .

    ;               reduce using rule 4 (LstV -> Instrucao .)


state 5

    (5) Instrucao -> ESCREVER . Resultado
    (10) Instrucao -> ESCREVER . Resultado COMENTARIO
    (17) Resultado -> . ListaResultados
    (18) Resultado -> . ListaResultados , Resultado
    (19) ListaResultados -> . MATH
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    Resultado                      shift and go to state 13
    ListaResultados                shift and go to state 14
    MATH                           shift and go to state 15

state 6

    (6) Instrucao -> VAR . ListaSimbolos
    (11) Instrucao -> VAR . ListaSimbolos COMENTARIO
    (12) ListaSimbolos -> . ListaIDs
    (13) ListaSimbolos -> . ListaIDs , ListaSimbolos
    (14) ListaIDs -> . ID
    (15) ListaIDs -> . ID = MATH

    ID              shift and go to state 23

    ListaSimbolos                  shift and go to state 21
    ListaIDs                       shift and go to state 22

state 7

    (7) Instrucao -> Identificador .

    ;               reduce using rule 7 (Instrucao -> Identificador .)


state 8

    (8) Instrucao -> COMENTARIO .

    ;               reduce using rule 8 (Instrucao -> COMENTARIO .)


state 9

    (9) Instrucao -> PARA . ID EM [ MATH . . MATH ] FAZER Resultado FIM PARA

    ID              shift and go to state 24


state 10

    (16) Identificador -> ID . = MATH

    =               shift and go to state 25


state 11

    (1) S -> LstV ; .
    (3) LstV -> LstV ; . Instrucao
    (5) Instrucao -> . ESCREVER Resultado
    (6) Instrucao -> . VAR ListaSimbolos
    (7) Instrucao -> . Identificador
    (8) Instrucao -> . COMENTARIO
    (9) Instrucao -> . PARA ID EM [ MATH . . MATH ] FAZER Resultado FIM PARA
    (10) Instrucao -> . ESCREVER Resultado COMENTARIO
    (11) Instrucao -> . VAR ListaSimbolos COMENTARIO
    (16) Identificador -> . ID = MATH

    $end            reduce using rule 1 (S -> LstV ; .)
    ESCREVER        shift and go to state 5
    VAR             shift and go to state 6
    COMENTARIO      shift and go to state 8
    PARA            shift and go to state 9
    ID              shift and go to state 10

    Instrucao                      shift and go to state 26
    Identificador                  shift and go to state 7

state 12

    (2) S -> FIM ; .

    $end            reduce using rule 2 (S -> FIM ; .)


state 13

    (5) Instrucao -> ESCREVER Resultado .
    (10) Instrucao -> ESCREVER Resultado . COMENTARIO

    ;               reduce using rule 5 (Instrucao -> ESCREVER Resultado .)
    COMENTARIO      shift and go to state 27


state 14

    (17) Resultado -> ListaResultados .
    (18) Resultado -> ListaResultados . , Resultado

    COMENTARIO      reduce using rule 17 (Resultado -> ListaResultados .)
    ;               reduce using rule 17 (Resultado -> ListaResultados .)
    FIM             reduce using rule 17 (Resultado -> ListaResultados .)
    ,               shift and go to state 28


state 15

    (19) ListaResultados -> MATH .
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    ,               reduce using rule 19 (ListaResultados -> MATH .)
    COMENTARIO      reduce using rule 19 (ListaResultados -> MATH .)
    ;               reduce using rule 19 (ListaResultados -> MATH .)
    FIM             reduce using rule 19 (ListaResultados -> MATH .)
    +               shift and go to state 29
    -               shift and go to state 30
    *               shift and go to state 31
    /               shift and go to state 32


state 16

    (24) MATH -> - . MATH
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    MATH                           shift and go to state 33

state 17

    (25) MATH -> ( . MATH )
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    MATH                           shift and go to state 34

state 18

    (26) MATH -> NUM .

    +               reduce using rule 26 (MATH -> NUM .)
    -               reduce using rule 26 (MATH -> NUM .)
    *               reduce using rule 26 (MATH -> NUM .)
    /               reduce using rule 26 (MATH -> NUM .)
    ,               reduce using rule 26 (MATH -> NUM .)
    COMENTARIO      reduce using rule 26 (MATH -> NUM .)
    ;               reduce using rule 26 (MATH -> NUM .)
    )               reduce using rule 26 (MATH -> NUM .)
    FIM             reduce using rule 26 (MATH -> NUM .)
    .               reduce using rule 26 (MATH -> NUM .)
    ]               reduce using rule 26 (MATH -> NUM .)


state 19

    (27) MATH -> ID .

    +               reduce using rule 27 (MATH -> ID .)
    -               reduce using rule 27 (MATH -> ID .)
    *               reduce using rule 27 (MATH -> ID .)
    /               reduce using rule 27 (MATH -> ID .)
    ,               reduce using rule 27 (MATH -> ID .)
    COMENTARIO      reduce using rule 27 (MATH -> ID .)
    ;               reduce using rule 27 (MATH -> ID .)
    )               reduce using rule 27 (MATH -> ID .)
    FIM             reduce using rule 27 (MATH -> ID .)
    .               reduce using rule 27 (MATH -> ID .)
    ]               reduce using rule 27 (MATH -> ID .)


state 20

    (28) MATH -> STRING .

    +               reduce using rule 28 (MATH -> STRING .)
    -               reduce using rule 28 (MATH -> STRING .)
    *               reduce using rule 28 (MATH -> STRING .)
    /               reduce using rule 28 (MATH -> STRING .)
    ,               reduce using rule 28 (MATH -> STRING .)
    COMENTARIO      reduce using rule 28 (MATH -> STRING .)
    ;               reduce using rule 28 (MATH -> STRING .)
    )               reduce using rule 28 (MATH -> STRING .)
    FIM             reduce using rule 28 (MATH -> STRING .)
    .               reduce using rule 28 (MATH -> STRING .)
    ]               reduce using rule 28 (MATH -> STRING .)


state 21

    (6) Instrucao -> VAR ListaSimbolos .
    (11) Instrucao -> VAR ListaSimbolos . COMENTARIO

    ;               reduce using rule 6 (Instrucao -> VAR ListaSimbolos .)
    COMENTARIO      shift and go to state 35


state 22

    (12) ListaSimbolos -> ListaIDs .
    (13) ListaSimbolos -> ListaIDs . , ListaSimbolos

    COMENTARIO      reduce using rule 12 (ListaSimbolos -> ListaIDs .)
    ;               reduce using rule 12 (ListaSimbolos -> ListaIDs .)
    ,               shift and go to state 36


state 23

    (14) ListaIDs -> ID .
    (15) ListaIDs -> ID . = MATH

    ,               reduce using rule 14 (ListaIDs -> ID .)
    COMENTARIO      reduce using rule 14 (ListaIDs -> ID .)
    ;               reduce using rule 14 (ListaIDs -> ID .)
    =               shift and go to state 37


state 24

    (9) Instrucao -> PARA ID . EM [ MATH . . MATH ] FAZER Resultado FIM PARA

    EM              shift and go to state 38


state 25

    (16) Identificador -> ID = . MATH
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    MATH                           shift and go to state 39

state 26

    (3) LstV -> LstV ; Instrucao .

    ;               reduce using rule 3 (LstV -> LstV ; Instrucao .)


state 27

    (10) Instrucao -> ESCREVER Resultado COMENTARIO .

    ;               reduce using rule 10 (Instrucao -> ESCREVER Resultado COMENTARIO .)


state 28

    (18) Resultado -> ListaResultados , . Resultado
    (17) Resultado -> . ListaResultados
    (18) Resultado -> . ListaResultados , Resultado
    (19) ListaResultados -> . MATH
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    ListaResultados                shift and go to state 14
    Resultado                      shift and go to state 40
    MATH                           shift and go to state 15

state 29

    (20) MATH -> MATH + . MATH
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    MATH                           shift and go to state 41

state 30

    (21) MATH -> MATH - . MATH
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    MATH                           shift and go to state 42

state 31

    (22) MATH -> MATH * . MATH
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    MATH                           shift and go to state 43

state 32

    (23) MATH -> MATH / . MATH
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    MATH                           shift and go to state 44

state 33

    (24) MATH -> - MATH .
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    +               reduce using rule 24 (MATH -> - MATH .)
    -               reduce using rule 24 (MATH -> - MATH .)
    *               reduce using rule 24 (MATH -> - MATH .)
    /               reduce using rule 24 (MATH -> - MATH .)
    ,               reduce using rule 24 (MATH -> - MATH .)
    COMENTARIO      reduce using rule 24 (MATH -> - MATH .)
    ;               reduce using rule 24 (MATH -> - MATH .)
    )               reduce using rule 24 (MATH -> - MATH .)
    FIM             reduce using rule 24 (MATH -> - MATH .)
    .               reduce using rule 24 (MATH -> - MATH .)
    ]               reduce using rule 24 (MATH -> - MATH .)

  ! +               [ shift and go to state 29 ]
  ! -               [ shift and go to state 30 ]
  ! *               [ shift and go to state 31 ]
  ! /               [ shift and go to state 32 ]


state 34

    (25) MATH -> ( MATH . )
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    )               shift and go to state 45
    +               shift and go to state 29
    -               shift and go to state 30
    *               shift and go to state 31
    /               shift and go to state 32


state 35

    (11) Instrucao -> VAR ListaSimbolos COMENTARIO .

    ;               reduce using rule 11 (Instrucao -> VAR ListaSimbolos COMENTARIO .)


state 36

    (13) ListaSimbolos -> ListaIDs , . ListaSimbolos
    (12) ListaSimbolos -> . ListaIDs
    (13) ListaSimbolos -> . ListaIDs , ListaSimbolos
    (14) ListaIDs -> . ID
    (15) ListaIDs -> . ID = MATH

    ID              shift and go to state 23

    ListaIDs                       shift and go to state 22
    ListaSimbolos                  shift and go to state 46

state 37

    (15) ListaIDs -> ID = . MATH
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    MATH                           shift and go to state 47

state 38

    (9) Instrucao -> PARA ID EM . [ MATH . . MATH ] FAZER Resultado FIM PARA

    [               shift and go to state 48


state 39

    (16) Identificador -> ID = MATH .
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    ;               reduce using rule 16 (Identificador -> ID = MATH .)
    +               shift and go to state 29
    -               shift and go to state 30
    *               shift and go to state 31
    /               shift and go to state 32


state 40

    (18) Resultado -> ListaResultados , Resultado .

    COMENTARIO      reduce using rule 18 (Resultado -> ListaResultados , Resultado .)
    ;               reduce using rule 18 (Resultado -> ListaResultados , Resultado .)
    FIM             reduce using rule 18 (Resultado -> ListaResultados , Resultado .)


state 41

    (20) MATH -> MATH + MATH .
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    +               reduce using rule 20 (MATH -> MATH + MATH .)
    -               reduce using rule 20 (MATH -> MATH + MATH .)
    ,               reduce using rule 20 (MATH -> MATH + MATH .)
    COMENTARIO      reduce using rule 20 (MATH -> MATH + MATH .)
    ;               reduce using rule 20 (MATH -> MATH + MATH .)
    )               reduce using rule 20 (MATH -> MATH + MATH .)
    FIM             reduce using rule 20 (MATH -> MATH + MATH .)
    .               reduce using rule 20 (MATH -> MATH + MATH .)
    ]               reduce using rule 20 (MATH -> MATH + MATH .)
    *               shift and go to state 31
    /               shift and go to state 32

  ! *               [ reduce using rule 20 (MATH -> MATH + MATH .) ]
  ! /               [ reduce using rule 20 (MATH -> MATH + MATH .) ]
  ! +               [ shift and go to state 29 ]
  ! -               [ shift and go to state 30 ]


state 42

    (21) MATH -> MATH - MATH .
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    +               reduce using rule 21 (MATH -> MATH - MATH .)
    -               reduce using rule 21 (MATH -> MATH - MATH .)
    ,               reduce using rule 21 (MATH -> MATH - MATH .)
    COMENTARIO      reduce using rule 21 (MATH -> MATH - MATH .)
    ;               reduce using rule 21 (MATH -> MATH - MATH .)
    )               reduce using rule 21 (MATH -> MATH - MATH .)
    FIM             reduce using rule 21 (MATH -> MATH - MATH .)
    .               reduce using rule 21 (MATH -> MATH - MATH .)
    ]               reduce using rule 21 (MATH -> MATH - MATH .)
    *               shift and go to state 31
    /               shift and go to state 32

  ! *               [ reduce using rule 21 (MATH -> MATH - MATH .) ]
  ! /               [ reduce using rule 21 (MATH -> MATH - MATH .) ]
  ! +               [ shift and go to state 29 ]
  ! -               [ shift and go to state 30 ]


state 43

    (22) MATH -> MATH * MATH .
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    +               reduce using rule 22 (MATH -> MATH * MATH .)
    -               reduce using rule 22 (MATH -> MATH * MATH .)
    *               reduce using rule 22 (MATH -> MATH * MATH .)
    /               reduce using rule 22 (MATH -> MATH * MATH .)
    ,               reduce using rule 22 (MATH -> MATH * MATH .)
    COMENTARIO      reduce using rule 22 (MATH -> MATH * MATH .)
    ;               reduce using rule 22 (MATH -> MATH * MATH .)
    )               reduce using rule 22 (MATH -> MATH * MATH .)
    FIM             reduce using rule 22 (MATH -> MATH * MATH .)
    .               reduce using rule 22 (MATH -> MATH * MATH .)
    ]               reduce using rule 22 (MATH -> MATH * MATH .)

  ! +               [ shift and go to state 29 ]
  ! -               [ shift and go to state 30 ]
  ! *               [ shift and go to state 31 ]
  ! /               [ shift and go to state 32 ]


state 44

    (23) MATH -> MATH / MATH .
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    +               reduce using rule 23 (MATH -> MATH / MATH .)
    -               reduce using rule 23 (MATH -> MATH / MATH .)
    *               reduce using rule 23 (MATH -> MATH / MATH .)
    /               reduce using rule 23 (MATH -> MATH / MATH .)
    ,               reduce using rule 23 (MATH -> MATH / MATH .)
    COMENTARIO      reduce using rule 23 (MATH -> MATH / MATH .)
    ;               reduce using rule 23 (MATH -> MATH / MATH .)
    )               reduce using rule 23 (MATH -> MATH / MATH .)
    FIM             reduce using rule 23 (MATH -> MATH / MATH .)
    .               reduce using rule 23 (MATH -> MATH / MATH .)
    ]               reduce using rule 23 (MATH -> MATH / MATH .)

  ! +               [ shift and go to state 29 ]
  ! -               [ shift and go to state 30 ]
  ! *               [ shift and go to state 31 ]
  ! /               [ shift and go to state 32 ]


state 45

    (25) MATH -> ( MATH ) .

    +               reduce using rule 25 (MATH -> ( MATH ) .)
    -               reduce using rule 25 (MATH -> ( MATH ) .)
    *               reduce using rule 25 (MATH -> ( MATH ) .)
    /               reduce using rule 25 (MATH -> ( MATH ) .)
    ,               reduce using rule 25 (MATH -> ( MATH ) .)
    COMENTARIO      reduce using rule 25 (MATH -> ( MATH ) .)
    ;               reduce using rule 25 (MATH -> ( MATH ) .)
    )               reduce using rule 25 (MATH -> ( MATH ) .)
    FIM             reduce using rule 25 (MATH -> ( MATH ) .)
    .               reduce using rule 25 (MATH -> ( MATH ) .)
    ]               reduce using rule 25 (MATH -> ( MATH ) .)


state 46

    (13) ListaSimbolos -> ListaIDs , ListaSimbolos .

    COMENTARIO      reduce using rule 13 (ListaSimbolos -> ListaIDs , ListaSimbolos .)
    ;               reduce using rule 13 (ListaSimbolos -> ListaIDs , ListaSimbolos .)


state 47

    (15) ListaIDs -> ID = MATH .
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    ,               reduce using rule 15 (ListaIDs -> ID = MATH .)
    COMENTARIO      reduce using rule 15 (ListaIDs -> ID = MATH .)
    ;               reduce using rule 15 (ListaIDs -> ID = MATH .)
    +               shift and go to state 29
    -               shift and go to state 30
    *               shift and go to state 31
    /               shift and go to state 32


state 48

    (9) Instrucao -> PARA ID EM [ . MATH . . MATH ] FAZER Resultado FIM PARA
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING

    -               shift and go to state 16
    (               shift and go to state 17
    NUM             shift and go to state 18
    ID              shift and go to state 19
    STRING          shift and go to state 20

    MATH                           shift and go to state 49

state 49

    (9) Instrucao -> PARA ID EM [ MATH . . . MATH ] FAZER Resultado FIM PARA
    (20) MATH -> MATH . + MATH
    (21) MATH -> MATH . - MATH
    (22) MATH -> MATH . * MATH
    (23) MATH -> MATH . / MATH

    .               shift and go to state 50
    +               shift and go to state 29
    -               shift and go to state 30
    *               shift and go to state 31
    /               shift and go to state 32


state 50

    (9) Instrucao -> PARA ID EM [ MATH . . . MATH ] FAZER Resultado FIM PARA

    .               shift and go to state 51


state 51

    (9) Instrucao -> PARA ID EM [ MATH . . . MATH ] FAZER Resultado FIM PARA
    (20) MATH -> . MATH + MATH
    (21) MATH -> . MATH - MATH
    (22) MATH -> . MATH * MATH
    (23) MATH -> . MATH / MATH
    (24) MATH -> . - MATH
    (25) MATH -> . ( MATH )
    (26) MATH -> . NUM
    (27) MATH -> . ID
    (28) MATH -> . STRING
